# travel-agent

./: README.md
backend/: Dockerfile  ENV_CONFIG.md  broswer.py  docker.sh  main.py  pyproject.toml
backend/agents/: README.md  langgraph_manager.py  langgraph_nodes.py  langgraph_state.py  langgraph_tools.py  langgraph_workflow.py  structured_output.py  team.py
backend/api/: app.py
backend/config/: llm.py  logger.py
backend/migrations/: create_plan_tasks_table.sql
backend/models/: travel_plan.py
backend/repository/: plan_task_repository.py
backend/router/: plan.py  workflow.py
backend/services/: db_service.py  plan_service.py
backend/tools/: __init__.py  attraction_search_tool.py  flight_search_tool.py  google_flight.py  hotel_search_tool.py  kayak_flight.py  kayak_hotel.py  restaurant_search_tool.py  scrape.py  weather_search_tool.py  web_search_tool.py
client/components/: header.tsx
moto_travel/: .gitignore  ARCHITECTURE_DESIGN.md  DEPLOYMENT.md  Dockerfile  EXTERNAL_SERVICES_CHECK_REPORT.md  EXTERNAL_SERVICES_STATUS.md  HOTEL_AGENT_DOC.md  PROJECT_ISSUES.md  PROJECT_STRUCTURE.md  README.md  alembic.ini  docker-compose.yml  env.example  pytest.ini  requirements.txt  run.py
moto_travel/alembic/: env.py
moto_travel/app/: __init__.py  config.py  database.py  langchain_integration.py
moto_travel/database/: init.sql
moto_travel/docs/: README.md  REFACTORING_HISTORY.md
moto_travel/examples/: basic_usage.py  enhanced_usage.py  route_preferences_usage.py  template_usage.py
moto_travel/scripts/: check_external_services.py  init_db.py  (+2 more)
(+90 files in other folders)
